// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > should perform onClean and clean filtered options 1`] = `
<body>
  <div>
    <div
      class="test-class _select_bae547"
      id="crypto-mock-random-UUID-1234"
    >
      <div
        class="_controls_bae547"
      >
        <div>
          <div
            class="_input_text_300ab4 _trigger_bae547"
          >
            <input
              class="_input_300ab4"
              id="mock-test-id"
              name="mock-test-id"
              placeholder="Select an option"
              title=""
              type="text"
            />
            <button
              class="_cleaner_300ab4 _cleaner_bae547"
            >
              <svg
                aria-hidden="true"
                class="_icon_2be8fc _primary_2be8fc _cleaner_icon_300ab4"
                fill="none"
                viewBox="-1 -1 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <i>
                Clean
              </i>
            </button>
          </div>
          <svg
            aria-hidden="true"
            class="_icon_2be8fc _primary_2be8fc _trigger_icon_bae547"
            fill="none"
            viewBox="-1 -4 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m1 1 5.326 5.7a.909.909 0 0 0 1.348 0L13 1"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="_select_list_703b77 _hidden_703b77"
    style="left: 0px; width: 0px; top: 0px; max-height: 0;"
  >
    <ul>
      <li
        class=""
        data-index="0"
      >
        <a
          data-index="0"
          href="#"
          title="Option 1"
        >
          Option 1
        </a>
      </li>
      <li
        class=""
        data-index="2"
      >
        <a
          data-index="2"
          href="#"
          title="Option 3"
        >
          Option 3
        </a>
      </li>
      <li
        class=""
        data-index="3"
      >
        <a
          data-index="3"
          href="#"
          title="Option 4"
        >
          Option 4
        </a>
      </li>
    </ul>
  </div>
</body>
`;

exports[`Select > should render a filtered list of options 1`] = `
<body>
  <div>
    <div
      class="test-class _select_bae547"
      id="crypto-mock-random-UUID-1234"
    >
      <div
        class="_controls_bae547"
      >
        <div>
          <div
            class="_input_text_300ab4 _trigger_bae547"
          >
            <input
              class="_input_300ab4"
              id="mock-test-id"
              name="mock-test-id"
              placeholder="Select an option"
              title="Option 3"
              type="text"
            />
            <button
              class="_cleaner_300ab4 _cleaner_bae547"
            >
              <svg
                aria-hidden="true"
                class="_icon_2be8fc _primary_2be8fc _cleaner_icon_300ab4"
                fill="none"
                viewBox="-1 -1 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <i>
                Clean
              </i>
            </button>
          </div>
          <svg
            aria-hidden="true"
            class="_icon_2be8fc _primary_2be8fc _trigger_icon_bae547"
            fill="none"
            viewBox="-1 -4 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m1 1 5.326 5.7a.909.909 0 0 0 1.348 0L13 1"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="_select_list_703b77 _visible_703b77"
    style="left: 0px; width: 0px; top: 0px; max-height: 0;"
  >
    <ul>
      <li
        class=""
        data-index="2"
      >
        <a
          data-index="2"
          href="#"
          title="Option 3"
        >
          <span />
          <b>
            Option 3
          </b>
          <span />
        </a>
      </li>
    </ul>
  </div>
</body>
`;

exports[`Select > should render as disabled 1`] = `
<div>
  <div
    class="test-class _select_bae547 _disabled_bae547"
    id="crypto-mock-random-UUID-1234"
  >
    <div
      class="_controls_bae547"
    >
      <div>
        <div
          class="_input_text_300ab4 _trigger_bae547"
        >
          <input
            class="_input_300ab4"
            disabled=""
            id="mock-test-id"
            name="mock-test-id"
            placeholder="Select an option"
            title="Option 1"
            type="text"
          />
          <button
            class="_cleaner_300ab4 _cleaner_bae547"
          >
            <svg
              aria-hidden="true"
              class="_icon_2be8fc _primary_2be8fc _cleaner_icon_300ab4"
              fill="none"
              viewBox="-1 -1 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            <i>
              Clean
            </i>
          </button>
        </div>
        <svg
          aria-hidden="true"
          class="_icon_2be8fc _primary_2be8fc _trigger_icon_bae547"
          fill="none"
          viewBox="-1 -4 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m1 1 5.326 5.7a.909.909 0 0 0 1.348 0L13 1"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select > should render as visible on trigger click 1`] = `
<body>
  <div>
    <div
      class="test-class _select_bae547"
      id="crypto-mock-random-UUID-1234"
    >
      <div
        class="_controls_bae547"
      >
        <div>
          <div
            class="_input_text_300ab4 _trigger_bae547"
          >
            <input
              class="_input_300ab4"
              id="mock-test-id"
              name="mock-test-id"
              placeholder="Select an option"
              title="Option 1"
              type="text"
            />
            <button
              class="_cleaner_300ab4 _cleaner_bae547"
            >
              <svg
                aria-hidden="true"
                class="_icon_2be8fc _primary_2be8fc _cleaner_icon_300ab4"
                fill="none"
                viewBox="-1 -1 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <i>
                Clean
              </i>
            </button>
          </div>
          <svg
            aria-hidden="true"
            class="_icon_2be8fc _primary_2be8fc _trigger_icon_bae547"
            fill="none"
            viewBox="-1 -4 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m1 1 5.326 5.7a.909.909 0 0 0 1.348 0L13 1"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="_select_list_703b77 _visible_703b77"
    style="left: 0px; width: 0px; top: 0px; max-height: 0;"
  >
    <ul>
      <li
        class="_selected_703b77"
        data-index="0"
      >
        <a
          data-index="0"
          href="#"
          title="Option 1"
        >
          Option 1
        </a>
      </li>
      <li
        class=""
        data-index="2"
      >
        <a
          data-index="2"
          href="#"
          title="Option 3"
        >
          Option 3
        </a>
      </li>
      <li
        class=""
        data-index="3"
      >
        <a
          data-index="3"
          href="#"
          title="Option 4"
        >
          Option 4
        </a>
      </li>
    </ul>
  </div>
</body>
`;

exports[`Select > should render properly 1`] = `
<body>
  <div>
    <div
      class="test-class _select_bae547"
      id="crypto-mock-random-UUID-1234"
    >
      <div
        class="_controls_bae547"
      >
        <div>
          <div
            class="_input_text_300ab4 _trigger_bae547"
          >
            <input
              class="_input_300ab4"
              id="mock-test-id"
              name="mock-test-id"
              placeholder="Select an option"
              title="Option 1"
              type="text"
            />
            <button
              class="_cleaner_300ab4 _cleaner_bae547"
            >
              <svg
                aria-hidden="true"
                class="_icon_2be8fc _primary_2be8fc _cleaner_icon_300ab4"
                fill="none"
                viewBox="-1 -1 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <i>
                Clean
              </i>
            </button>
          </div>
          <svg
            aria-hidden="true"
            class="_icon_2be8fc _primary_2be8fc _trigger_icon_bae547"
            fill="none"
            viewBox="-1 -4 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m1 1 5.326 5.7a.909.909 0 0 0 1.348 0L13 1"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="_select_list_703b77 _hidden_703b77"
    style="left: 0px; width: 0px; top: 0px; max-height: 0;"
  >
    <ul>
      <li
        class="_selected_703b77"
        data-index="0"
      >
        <a
          data-index="0"
          href="#"
          title="Option 1"
        >
          Option 1
        </a>
      </li>
      <li
        class=""
        data-index="2"
      >
        <a
          data-index="2"
          href="#"
          title="Option 3"
        >
          Option 3
        </a>
      </li>
      <li
        class=""
        data-index="3"
      >
        <a
          data-index="3"
          href="#"
          title="Option 4"
        >
          Option 4
        </a>
      </li>
    </ul>
  </div>
</body>
`;

exports[`Select > should render the options list displayer by ref 1`] = `
{
  "current": <input
    class="_input_300ab4"
    id="mock-test-id"
    name="mock-test-id"
    placeholder="Select an option"
    title="Option 1"
    type="text"
  />,
}
`;
